# To-Do-List

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1fe07c87f83e_autoclose_fields.py  396d31a17c37_add_closed_at_to_task.py  4a73c5d0d0a4_initial_schema.py  5d1a051355aa_feat_fix_project_names_for_tasks_when_a_.py  7494ebe428ff_correct_closed_at.py  74cc693a1432_add_closed_at_to_task.py  76a1b4dab618_initial_migration_with_correct_enum.py  8f0cb70aea64_add_closed_at_to_task.py  a4ea9f658b92_init.py  b12bdeab212b_add_closed_at_to_task.py  d12b12ddab5b_add_closed_at_to_task.py
src/todo/: .env.example  alembic.ini  docker-compose.yml
src/todo/alembic/: env.py
src/todo/alembic/versions/: 5dee9471ef08_create_projects_and_tasks.py
src/todo/app/: dependencies.py  main.py
src/todo/app/api/routers/: project_router.py  task_router.py
src/todo/app/api/schemas/: project.py  task.py
src/todo/app/commands/: autoclose_overdue.py  scheduler.py
src/todo/cli/: main.py
src/todo/commands/: autoclose_overdue.py  scheduler.py
src/todo/core/: project_service.py  task_service.py
src/todo/db/: session.py
src/todo/model/: enums.py  project.py  task.py
src/todo/repositories/: project_repository.py  task_repository.py
src/todo/storage/: in_memory_storage.py
src/todo/utils/: utils.py  validators.py
